--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:title" content="GUITAR SURVIVOR" />
     <meta property="og:description" content="撃って弾いて生き残れ！ギター×シューティングサバイバーゲーム" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://あなたのサイトのURL.com/" />
-    <meta property="og:image" content="https://あなたのサイトのURL.com/ogp.png" />
+    <meta property="og:url" content="https://guitar-survivor.vercel.app/" />
+    <meta property="og:image" content="https://guitar-survivor.vercel.app/ogp.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GUITAR SURVIVOR" />
     <meta name="twitter:description" content="撃って弾いて生き残れ！ギター×シューティングサバイバーゲーム" />
-    <meta name="twitter:image" content="https://あなたのサイトのURL.com/ogp.png" />
+    <meta name="twitter:image" content="https://https://guitar-survivor.vercel.app/ogp.png" />
     </head>
   <body>
     <div id="app"></div>
