--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>GUITAR SURVIVOR</title>
-    <meta name="description" content="撃って弾いて生き残れ！ギター×シューティングサバイバーゲーム" />
 
-    <meta property="og:title" content="GUITAR SURVIVOR" />
-    <meta property="og:description" content="撃って弾いて生き残れ！ギター×シューティングサバイバーゲーム" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://guitar-survivor.vercel.app/" />
-    <meta property="og:image" content="https://guitar-survivor.vercel.app/ogp.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="GUITAR SURVIVOR" />
-    <meta name="twitter:description" content="撃って弾いて生き残れ！ギター×シューティングサバイバーゲーム" />
-    <meta name="twitter:image" content="https://https://guitar-survivor.vercel.app/ogp.png" />
-    </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+  <title>GUITAR SURVIVOR</title>
+  <meta name="description" content="撃って弾いて生き残れ！ギター×シューティングサバイバーゲーム" />
+
+  <meta property="og:title" content="GUITAR SURVIVOR" />
+  <meta property="og:description" content="撃って弾いて生き残れ！ギター×シューティングサバイバーゲーム" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://guitar-survivor.vercel.app/" />
+  <meta property="og:image" content="https://guitar-survivor.vercel.app/ogp.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="GUITAR SURVIVOR" />
+  <meta name="twitter:description" content="撃って弾いて生き残れ！ギター×シューティングサバイバーゲーム" />
+  <meta name="twitter:image" content="https://https://guitar-survivor.vercel.app/ogp.png" />
+</head>
+
+<body>
+  <div id="app">
+    <div id="loading-screen"
+      style="position:fixed;top:0;left:0;width:100%;height:100%;background:#000;display:flex;justify-content:center;align-items:center;color:#0ff;font-family:sans-serif;font-size:24px;z-index:9999;">
+      LOADING...
+    </div>
+  </div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
